# the-architect

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 0001_core_tables.py
examples/aces/: dispatchers.py  workflow.py
examples/aces-brand/: workflow.py
examples/aces/custom_tools/: analytics.py  approvals.py  assets.py  briefs.py  calendar.py  context.py  ideas.py  images.py  pieces.py  renders.py  research.py  scripts.py  slide_plans.py
examples/asos/: workflow.py
examples/crm/: dispatchers.py  workflow.py
examples/todo/: workflow.py
src/architect/cli/: apikey_cmd.py  apply_cmd.py  budget_cmd.py  credential_cmd.py  destroy_cmd.py  init_cmd.py  loader.py  main.py  plan_cmd.py  serve_cmd.py  state_cmd.py
src/architect/core/: auth.py  database.py  encryption.py  observability.py
src/architect/generators/: __init__.py  model_gen.py  orchestrator.py  repo_gen.py  schema_gen.py  serialize_gen.py  tool_gen.py
src/architect/primitives/: __init__.py  provider.py  workflow.py
src/architect/providers/: instagram.py
src/architect/runtime/: app.py  dispatcher.py  loader.py  pipeline_engine.py  provider_registry.py
tests/integration/: test_aces_brand_port.py  test_multi_workflow.py  test_workflow_e2e.py
tests/unit/: test_app_factory.py  test_approval_tools.py  test_approvals.py  test_auth.py  test_budget_tracker.py  test_cli_apikey.py  test_cli_init.py  test_cli_plan_apply.py  test_cli_serve_budget_cred.py  test_credentials.py  test_entity_definition.py  test_execution_history.py  test_generate_orchestrator.py  test_model_generator.py  test_pipeline_engine.py  test_pipeline_tools.py  test_repo_generator.py  test_runtime.py  test_schema_generator.py  test_serialize_generator.py  test_state.py  test_tool_generator.py  test_workflow_definition.py
(+76 files in other folders)
