[project]
name = "the-architect"
version = "0.0.1"
description = "The Architect — Infrastructure for declarative MCP agent workflows"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Darien Herrera", email = "dariensherrera.dev@gmail.com" },
]

dependencies = [
  # Web
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  # Data
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  # MCP
  "mcp[cli]>=1.0.0",
  "argon2-cffi>=23.1.0",
  # Validation / settings
  "pydantic[email]>=2.10.0",
  "pydantic-settings>=2.7.0",
  # Vector (for Agent Experience System - Phase 3)
  "pgvector>=0.3.6",
  # Encryption
  "cryptography>=44.0.0",
  # Templates
  "jinja2>=3.1.0",
  # CLI
  "click>=8.1.0",
  # Observability
  "structlog>=24.4.0",
  # HTTP client
  "httpx>=0.28.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "anyio>=4.7.0",
  "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E", "W", "F"]
"tests/**" = ["B", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "build/", "dist/", "generated/"]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[project.scripts]
architect = "architect.cli.main:cli"
